<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:backgroundTint="#D5775B"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/adresBasligi_txt"
        android:layout_width="179dp"
        android:layout_height="50dp"
        android:fontFamily="@font/alata"
        android:shadowColor="#000000"
        android:text="@string/adres_basligi"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.068"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.086" />

    <TextView
        android:id="@+id/isimSoyisim_txt"
        android:layout_width="179dp"
        android:layout_height="50dp"
        android:fontFamily="@font/alata"
        android:shadowColor="#000000"
        android:text="@string/isim_soyisim"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.068"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.16" />

    <TextView
        android:id="@+id/adres2_text"
        android:layout_width="179dp"
        android:layout_height="50dp"
        android:fontFamily="@font/alata"
        android:shadowColor="#000000"
        android:text="@string/adres_2"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.068"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.306" />

    <TextView
        android:id="@+id/ulke_txt"
        android:layout_width="179dp"
        android:layout_height="50dp"
        android:fontFamily="@font/alata"
        android:shadowColor="#000000"
        android:text="@string/ulke"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.068"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.378" />

    <TextView
        android:id="@+id/il_txt"
        android:layout_width="179dp"
        android:layout_height="50dp"
        android:fontFamily="@font/alata"
        android:shadowColor="#000000"
        android:text="@string/il"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.068"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.452" />

    <TextView
        android:id="@+id/ilce_txt"
        android:layout_width="179dp"
        android:layout_height="50dp"
        android:fontFamily="@font/alata"
        android:shadowColor="#000000"
        android:text="@string/ilce"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.068"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.525" />

    <TextView
        android:id="@+id/mahalle_txt"
        android:layout_width="179dp"
        android:layout_height="50dp"
        android:fontFamily="@font/alata"
        android:shadowColor="#000000"
        android:text="@string/mahalle"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.068"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.599" />

    <TextView
        android:id="@+id/postakodu_txt"
        android:layout_width="179dp"
        android:layout_height="50dp"
        android:fontFamily="@font/alata"
        android:shadowColor="#000000"
        android:text="@string/posta_kodu"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.068"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.672" />

    <TextView
        android:id="@+id/telefonNo_txt"
        android:layout_width="156dp"
        android:layout_height="85dp"
        android:fontFamily="@font/alata"
        android:shadowColor="#000000"
        android:text="@string/telefon_no"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.058"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.763" />

    <TextView
        android:id="@+id/tcNo_txt"
        android:layout_width="174dp"
        android:layout_height="56dp"
        android:fontFamily="@font/alata"
        android:shadowColor="#000000"
        android:text="@string/tc_kimlik_numarası"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.064"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.819" />

    <TextView
        android:id="@+id/adres1_txt"
        android:layout_width="179dp"
        android:layout_height="50dp"
        android:fontFamily="@font/alata"
        android:shadowColor="#000000"
        android:text="@string/adres_1"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.068"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.233" />

    <EditText
        android:id="@+id/adresBasligi_input"
        android:layout_width="182dp"
        android:layout_height="50dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/adres_basligi"
        android:importantForAutofill="no"
        android:inputType="textMultiLine"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.847"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.086"
        tools:ignore="DuplicateSpeakableTextCheck,TextContrastCheck" />

    <EditText
        android:id="@+id/isimSoyisim_input"
        android:layout_width="182dp"
        android:layout_height="50dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/isim_soyisim"
        android:importantForAutofill="no"
        android:inputType="textMultiLine"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.847"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.16"
        tools:ignore="DuplicateSpeakableTextCheck,TextContrastCheck" />

    <EditText
        android:id="@+id/adres1_input"
        android:layout_width="182dp"
        android:layout_height="50dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/adres_1"
        android:importantForAutofill="no"
        android:inputType="textMultiLine"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.851"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.233"
        tools:ignore="DuplicateSpeakableTextCheck,TextContrastCheck" />

    <EditText
        android:id="@+id/adres2_input"
        android:layout_width="182dp"
        android:layout_height="50dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/adres_2"
        android:importantForAutofill="no"
        android:inputType="textMultiLine"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.851"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.306"
        tools:ignore="DuplicateSpeakableTextCheck,TextContrastCheck" />

    <Spinner
        android:id="@+id/ulke_spinner"
        android:layout_width="182dp"
        android:layout_height="49dp"
        android:contentDescription="@string/ulke"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.851"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.379"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <Spinner
        android:id="@+id/il_spinner"
        android:layout_width="182dp"
        android:layout_height="49dp"
        android:contentDescription="@string/il"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.851"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.453"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <Spinner
        android:id="@+id/ilce_spinner"
        android:layout_width="182dp"
        android:layout_height="49dp"
        android:contentDescription="@string/ilce"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.851"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.526"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <Spinner
        android:id="@+id/mahalle_spinner"
        android:layout_width="182dp"
        android:layout_height="49dp"
        android:contentDescription="@string/mahalle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.851"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.599"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <EditText
        android:id="@+id/postakodu_input"
        android:layout_width="186dp"
        android:layout_height="47dp"
        android:ems="10"
        android:hint="@string/posta_kodu"
        android:importantForAutofill="no"
        android:inputType="number"
        android:maxLength="6"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.862"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.673"
        tools:ignore="DuplicateSpeakableTextCheck,TextContrastCheck,TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/telefonNo_input"
        android:layout_width="184dp"
        android:layout_height="50dp"
        android:ems="10"
        android:hint="@string/telefon_no"
        android:importantForAutofill="no"
        android:inputType="phone"
        android:maxLength="11"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.859"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.745"
        tools:ignore="DuplicateSpeakableTextCheck,TextContrastCheck" />

    <EditText
        android:id="@+id/tcNo_input"
        android:layout_width="186dp"
        android:layout_height="51dp"
        android:ems="10"
        android:hint="@string/tc_kimlik_numarası"
        android:importantForAutofill="no"
        android:inputType="number"
        android:maxLength="11"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.866"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.821"
        tools:ignore="DuplicateSpeakableTextCheck,TextContrastCheck" />

    <Button
        android:id="@+id/btn_Kaydet"
        android:layout_width="179dp"
        android:layout_height="50dp"
        android:backgroundTint="#F6673D"
        android:fontFamily="@font/alata"
        android:shadowColor="#FFFFFF"
        android:text="@string/btn_kaydet"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.862"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.894" />

    <Button
        android:id="@+id/btn_iptalET"
        android:layout_width="179dp"
        android:layout_height="50dp"
        android:backgroundTint="#F6673D"
        android:fontFamily="@font/alata"
        android:shadowColor="#FFFFFF"
        android:text="@string/btn_iptalet"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.862"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.976" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="148dp"
        android:layout_height="103dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/fatihexpresslogo"
        tools:ignore="ImageContrastCheck"
        android:contentDescription="TODO" />

</androidx.constraintlayout.widget.ConstraintLayout>